# internal/dto/article.go
@@ -1,7 +1,10 @@
 package dto
 
 type Article struct {
-	*Common
-	Name  string `json:"name"`
-	State int8   `json:"state"`
+	Common
+	Title          string `json:"title"`
+	Desc           string `json:"desc"`
+	ConverImageUrl string `json:"conver_image_url"`
+	Content        string `json:"content"`
+	State          uint8  `json:"state"`
 }
