# internal/dto/tag.go
@@ -1,10 +1,7 @@
 package dto
 
 type Tag struct {
-	*Common
-	Title          string `json:"title"`
-	Desc           string `json:"desc"`
-	ConverImageUrl string `json:"conver_image_url"`
-	Content        string `json:"content"`
-	State          uint8  `json:"state"`
+	Common
+	Name  string `json:"name"`
+	State int8   `json:"state"`
 }
